--- a/source/stylesheets/cass.scss
+++ b/source/stylesheets/cass.scss
@@ -1,7 +1,7 @@
 /*!
  * CaSS Stylesheet
  * Copyright 2022 Cas Boomkamp
- * Licensed under MIT
+ * Licensed under MIT (https://github.com/Casb02/CaSS-Stylesheet/blob/primary/LICENSE.md)
  */
 
 @import "imports/global";
