--- a/source/stylesheets/imports/_typography.scss
+++ b/source/stylesheets/imports/_typography.scss
@@ -1,6 +1,32 @@
 @import "settings";
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 
 body {
   font-family: $default-font;
+  color: $body-color;
+}
+
+a {
+  color: $link-color;
+  text-decoration: none;
+  &:hover {
+    color: darken($link-color, 20%);
+    text-decoration: underline;
+  }
+}
+
+$heading-sizes: (
+        h1: 2.5rem,
+        h2: 2rem,
+        h3: 1.5rem,
+        h4: 1.25rem,
+        h5: 1rem,
+        h6: 0.875rem
+);
+
+@each $key, $value in $heading-sizes {
+  #{$key} {
+    font-size: $value;
+    line-height: 1.2;
+  }
 }
