--- a/source/stylesheets/imports/_settings.scss
+++ b/source/stylesheets/imports/_settings.scss
@@ -5,6 +5,13 @@ $color-secondary: #A0C1D1 !default;
 $color-light: #DADFF7 !default;
 $color-dark: #232C33 !default;
 $color-gray: #B5B2C2 !default;
+$color-red: #E85858 !default;
+$color-green: #5ed13e !default;
+$color-blue: #2ba7e3 !default;
+$color-yellow: #FFCB00 !default;
+$color-orange: #e38220 !default;
+$color-purple: #d469e5 !default;
+$color-teal: #19a4b5 !default;
 $black: #000 !default;
 $white: #fff !default;
 
@@ -15,9 +22,18 @@ $theme-colors: (
         "light": $color-light,
         "dark": $color-dark,
         "gray": $color-gray,
+        "red": $color-red,
+        "green": $color-green,
+        "blue": $color-blue,
+        "yellow": $color-yellow,
+        "orange": $color-orange,
+        "purple": $color-purple,
+        "teal": $color-teal,
         "black": $black,
         "white": $white
 ) !default;
+
+
 
 //Fonts
 $default-font: 'Lato', sans-serif !default;
