--- a/source/stylesheets/imports/_settings.scss
+++ b/source/stylesheets/imports/_settings.scss
@@ -24,7 +24,7 @@ $default-font: 'Lato', sans-serif !default;
 $body-color: $black !default;
 $link-color: $color-primary !default;
 
-//Bereakpoints (stolen from Bootstrap)
+//Breakpoints (stolen from Bootstrap)
 $breakpoint-xs: 480px !default;
 $breakpoint-sm: 576px !default;
 $breakpoint-md: 768px !default;
