--- a/source/stylesheets/imports/grid/_gridsystem.scss
+++ b/source/stylesheets/imports/grid/_gridsystem.scss
@@ -2,45 +2,56 @@
 @import "../settings";
 
 .row {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+  display:        flex;
+  flex-wrap:      wrap;
+  margin-right:   -15px;
+  margin-left:    -15px;
+  padding:        0 15px;
 }
 
 $grid-columns: 12;
+$gutter_width: 15;
 
 // Defaults for all columns
 // Check if class starts with col-
 [class^="col"] {
-  flex: 0 0 100%;
-  max-width: 100%;
-  margin-right: 15px;
-  margin-left: 15px;
+  flex:         0 0 100%;
+  max-width:    100%;
+  border-left:  transparent solid 7px;
+  border-right: transparent solid 7px;
 }
+
+
 
 
 // Col-*-*
 // --------------------------------------------------
 @for $i from 1 through $grid-columns {
-  $flex-content: 0 0 #{math.div($i * 100, $grid-columns) + '%'};
-  $max-width-content: #{math.div($i * 100, $grid-columns) + '%'};
-  .col-#{$i} {
-    flex: $flex-content;
-    max-width: $max-width-content;
-  }
+  //calculate the width of the column
+  $flex-content:        0 0 #{math.div($i * 100, $grid-columns) + '%'};
+  $max-width-content:   #{math.div($i * 100, $grid-columns) + '%'};
 
+  //create the class
+  .col-#{$i} {
+    flex:       $flex-content;
+    max-width:  $max-width-content;
+  }
 }
 
 //Responsive
 @each $breakpoint, $size in $breakpoints {
+  //media query for each breakpoint
   @media (min-width: $size) {
+    //iterate through each column
     @for $i from 1 through $grid-columns {
-      $flex-content: 0 0 #{math.div($i * 100, $grid-columns) + '%'};
-      $max-width-content: #{math.div($i * 100, $grid-columns) + '%'};
+      //calculate the width of the column
+      $flex-content:        0 0 #{math.div($i * 100, $grid-columns) + '%'};
+      $max-width-content:   #{math.div($i * 100, $grid-columns) + '%'};
+
+      //create the class
       .col-#{$breakpoint}-#{$i} {
-        flex: $flex-content;
-        max-width: $max-width-content;
+        flex:       $flex-content;
+        max-width:  $max-width-content;
       }
     }
   }
