--- a/source/stylesheets/imports/_card.scss
+++ b/source/stylesheets/imports/_card.scss
@@ -2,9 +2,12 @@
 
 .card {
     margin:         $card-margin-y $card-margin-x;
-    max-width:      400px;
     padding:        $card-padding-y $card-padding-x;
     text-align:     center;
+}
+
+.card-mw {
+    max-width:  400px;
 }
 
 .card-header {
@@ -24,6 +27,6 @@
     border-radius:      0 0 $card-border-radius $card-border-radius;
     padding:            1rem .5rem;
     p {
-        margin: 0;
+        margin:         0;
     }
 }
