Upload css files

--- a/source/stylesheets/imports/_containers.scss
+++ b/source/stylesheets/imports/_containers.scss
@@ -3,7 +3,7 @@
 .container {
   max-width:  92%;
   margin:     0 auto;
-  overflow:   hidden;
+  //overflow:   hidden;
   @each $container, $width in $container-widths {
     @media (min-width: map-get($breakpoints, $container)) {
       max-width: #{$width};
@@ -14,5 +14,15 @@
 .container-fw {
   max-width:  95%;
   margin:     0 auto;
+  //overflow:   hidden;
+}
+
+.overflow-hidden {
   overflow:   hidden;
+}
+.overflow-hidden-y {
+  overflow-y: hidden;
+}
+.overflow-hidden-x {
+  overflow-x: hidden;
 }
